--- a/biblio.bib
+++ b/biblio.bib
@@ -14,3 +14,41 @@ MRREVIEWER = {Andrea\ Mondino},
        DOI = {10.4007/annals.2014.179.2.6},
        URL = {https://doi.org/10.4007/annals.2014.179.2.6},
 }
+
+
+@article{HuiskenYau_CenterMass,
+	author = {Huisken, Gerhard and Yau, Shing-Tung},
+	date = {1996/01/01},
+	date-added = {2025-06-13 12:02:39 +0200},
+	date-modified = {2025-06-13 12:02:39 +0200},
+	doi = {10.1007/s002220050054},
+	id = {Huisken1996},
+	isbn = {1432-1297},
+	journal = {Inventiones mathematicae},
+	number = {1},
+	pages = {281--311},
+	title = {Definition of center of mass for isolated physical systems and unique foliations by stable spheres with constant mean curvature},
+	url = {https://doi.org/10.1007/s002220050054},
+	volume = {124},
+	year = {1996},
+	bdsk-url-1 = {https://doi.org/10.1007/s002220050054}}
+
+
+@book {ACGH_GeometryAlgebraicCurves,
+    AUTHOR = {Arbarello, Enrico and Cornalba, Maurizio and Griffiths,
+              Phillip A.},
+     TITLE = {Geometry of algebraic curves. {V}olume {II}},
+    SERIES = {Grundlehren der mathematischen Wissenschaften [Fundamental
+              Principles of Mathematical Sciences]},
+    VOLUME = {268},
+      NOTE = {With a contribution by Joseph Daniel Harris},
+ PUBLISHER = {Springer, Heidelberg},
+      YEAR = {2011},
+     PAGES = {xxx+963},
+      ISBN = {978-3-540-42688-2},
+   MRCLASS = {14H10 (32G15)},
+  MRNUMBER = {2807457},
+MRREVIEWER = {E.\ Looijenga},
+       DOI = {10.1007/978-3-540-69392-5},
+       URL = {https://doi.org/10.1007/978-3-540-69392-5},
+}
