--- a/main.tex
+++ b/main.tex
@@ -115,65 +115,56 @@ It holds the following theorem, proved by D. Christodoulou and S.T. Yau:
 \begin{thm}[Christodoulou, Yau]\label{thm: Christodoulou-Yau}
     Let \((M^3,g)\) be a Riemannian 3-manifold and let \(\Sigma^2 \subset (M^3,g)\) be volume-preserving stable CMC sphere. Then
     \begin{equation}\label{eq: CY eq}
-        16\pi - H^2|\Sigma| \ge \frac{2}{3}\int_\Sigma (R+|h^\circ|^2) \ \dif \sigma.
+        16\pi - H^2|\Sigma| \ge \frac{2}{3}\int_\Sigma (R^M+|h^\circ|^2) \ \dif \sigma.
     \end{equation}
-    In particular, if \((M,g)\) has positive scalar curvature \(R\ge 0\), the Hawking mass of \(\Sigma\) is non-negative:
+    In particular, if \((M,g)\) has positive scalar curvature \(R^M\ge 0\), the Hawking mass of \(\Sigma\) is non-negative:
     \[
         m_{\mathrm{Haw}}(\Sigma) \coloneq \sqrt{\frac{|\Sigma|}{16\pi}}\left( 1 - \frac{1}{16\pi}\int_\Sigma H^2 \dif \sigma \right) \ge 0.
     \]
 \end{thm}
-The importance of this result is due to a theorem of Huisken and Yau \cite{HuiskenYau_CenterMass}: every asymptotically flat\footnote{A complete 3-manifold \((M,g)\) is \emph{asymptotically flat} if there is a compact subset \(K \subset M\) and a diffeomorphism \(\vp \colon \R^3 \setminus B_1(0) \to M\setminus K\) such that if \(g_{ij} \dif x^i\dif x^j = \vp^*g\) on \(\R^3\setminus B_1(0)\), then
+The importance of this result is due to a theorem of Huisken and Yau \cite{HuiskenYau_CenterMass}: every asymptotically flat\footnote{A complete 3-manifold \((M,g)\) is \emph{asymptotically flat} if there is a compact subset \(K \subset M\), a positive number \(R>0\) and a diffeomorphism \(\vp \colon \R^3 \setminus B_R(0) \to M\setminus K\) such that if \(g_{ij} \dif x^i\dif x^j = \vp^*g\) on \(\R^3\setminus B_R(0)\), then
 \[
     g_{ij}= \left(1+ \frac{2m}{r} \right) \delta_{ij} + O(r^{-2}).
 \]
-} 3-manifold \((M,g)\) admits a foliation of the asymptotically flat end by CMC-stable 2-spheres \(\{\Sigma_r\}_{r>R}\). Then we can use the Hawking mass to give a notion of total mass of \((M,g)\):
+The charts like \((M\setminus K, \vp^{-1})\) are called \emph{AF charts}.} 3-manifold \((M,g)\) admits a foliation of the asymptotically flat end by CMC-stable 2-spheres \(\{\Sigma_r\}_{r>R}\). Then we could define a notion of total mass taking the limit of the Hawking mass of these CMC-stable 2-spheres when \(R \to +\infty\). Turns out that is coincide with the Arnowitt–Deser–Misner (ADM) mass\footnote{
+    Fix an AF chart \((M\setminus K, x^1,\dots, x^n)\). Then the ADM mass of \((M,g)\) is:
+    \[
+        m_{ADM}(M,g) \coloneq \frac{1}{2(n-1)|\Sp^{n-1}|}\lim_{r \to \infty} \int_{\{|x|=r\}} \left(\frac{\de g_{ij}}{\de x^i}- \frac{\de g_{ii}}{\de x^j} \right) \frac{x^i}{|x|} \ \dif \sigma_e,
+    \]
+    where \(\dif \sigma_e\) is the area element on \(\{|x|=r\}\) induced by the Euclidean metric of \(\R^n\setminus B_R(0)\).
+}
 \[
-    \mathrm{mass}_{\mathrm{Haw}}(M) = \sup_{r>R} m_{\mathrm{Haw}}(\Sigma_r).
+    m_{\mathrm{ADM}}(M,g) = \sup_{r>R} m_{\mathrm{Haw}}(\Sigma_r).
 \]
-Using this theorem, if the scalar curvature \(R_g \ge 0\) is non-negative, then the total mass will be non-negative. 
+Given this facts, as a corollary of Christodoulou-Yau theorem we get the positive mass theorem. 
 
-In this note, we extend the above theorem to orientable surfaces \(\Sigma\) of any genus. 
+\begin{cor}[Positive mass theorem]
+    Let \((M^3,g)\) be an asymptotically flat Riemannian 3-manifold with non negative scalar curvature \(R_g \ge 0\). Then the ADM mass is non negative.
+\end{cor}
+
+In this note, we extend Theorem\ref{thm: Christodoulou-Yau} to orientable surfaces \(\Sigma\) of any genus. 
 
 \begin{thm}\label{thm: Christodoulou-Yau for higher genus}
     Let \((M^3,g)\) be a Riemannian 3-manifold and let \(\Sigma^2 \subset (M^3,g)\) be volume-preserving stable CMC surface of genus \(k\). Then
     \begin{itemize}
         \item if \(k\) is even,
         \[
-        16\pi - H^2|\Sigma| \ge \frac{2}{3}\int_\Sigma (R+|h^\circ|^2) \ \dif \sigma;
+        16\pi - H^2|\Sigma| \ge \frac{2}{3}\int_\Sigma (R^M+|h^\circ|^2) \ \dif \sigma;
         \]  
         \item if \(k\) is odd,
         \[
-        \frac{64\pi}{3} - H^2|\Sigma| \ge \frac{2}{3}\int_\Sigma (R+|h^\circ|^2) \ \dif \sigma.
+        \frac{64\pi}{3} - H^2|\Sigma| \ge \frac{2}{3}\int_\Sigma (R^M+|h^\circ|^2) \ \dif \sigma.
         \]
     \end{itemize}
 \end{thm}
 
-In 2014, Marques and Neves \cite{MarquesNeves_Willmore} proved that for every surface \(\Sigma \subset \R^3\) with genus at least 1,
-\begin{equation}\label{eq: Willmore}
-    \int_\Sigma H^2 \ge 8\pi^2
-\end{equation}
-with equality if and only if \(\Sigma\) is a torus obtained by stereographic projecting the Clifford torus \(\Sp^1(1/\sqrt{2}) \times \Sp^1(1/\sqrt{2})\) of the round 3-sphere \(\Sp^3\). 
+The proof of Theorem~\ref{thm: Christodoulou-Yau for higher genus}, which will be given in Section~\ref{sec: Christodoulou Yau for higher genus}, is an adaptation of the proof of Theorem~\ref{thm: Christodoulou-Yau}. Specifically, the idea is to use the CMC-stability inequality with zero-average test functions, that will be constructed using two key results:
+\begin{enumerate}[label=(\roman*)]
+    \item Brill-Noether theory,
+    \item Hersch's balancing trick.
+\end{enumerate}
 
-As an immediate consequence of Theorem~\ref{thm: Christodoulou-Yau for higher genus},
-\begin{cor}
-    There are no CMC-stable surfaces of genus \(k\ge 1\) in the Euclidean space \(\R^3\).
-\end{cor}
-\begin{proof}
-    Suppose by contradiction that there exists a CMC-stable surface \(\Sigma \subset \R^3\) of genus \(k\ge 1\). Suppose that \(k\) is odd. Then by \eqref{eq: Willmore} and Theorem~\ref{thm: Christodoulou-Yau for higher genus},
-    \begin{align*}
-        8\pi^2 &\le \int_\Sigma H^2 \ \dif \sigma \le -\frac{2}{3}\int_\Sigma |h^\circ|^2 \ \dif \sigma + \frac{64\pi}{3} \\
-        & \le \frac{64\pi}{3},
-    \end{align*}
-    a contradiction. If \(k\) is even, in the same way we can get \(8\pi^2 \le 16\pi\), a contradiction. \qedhere
-    
-\end{proof}
-
-
-
-
-\section{Christodoulou-Yau theorem for higher genus}
-
-The proof of Theorem~\ref{thm: Christodoulou-Yau for higher genus} is an adaptation of the proof of Theorem~\ref{thm: Christodoulou-Yau}. Specifically, the idea is to use the CMC-stability inequality with zero-average test functions, that will be constructed using the Hersch's trick together with the following result.
+Let us briefly state them here. 
 
 \begin{thm}\label{thm: corollary of Brill-Noether}
 	If \((\Sigma,g)\) is a closed (compact and without boundary) oriented surface of genus \(k\), then there exists a branched conformal covering map
@@ -203,8 +194,6 @@ The proof of Theorem~\ref{thm: Christodoulou-Yau for higher genus} is an adaptat
 
 The proof of Theorem~\ref{thm: corollary of Brill-Noether} is a consequence of the Brill-Noether Theorem~\ref{thm: Brill-Noether}, and it is postponed to the appendix of this note.
 
-Recall the so-called Hersch's balancing trick.
-
 \begin{lemma}[Hersch's balancing trick]\label{lem: Hersch trick}
 	Let \(\Sigma^2 \subset (M^3,g)\) be a closed oriented surface and a map \(\Phi \colon (\Sigma,g) \to (\Sp^2,g_{\Sp^2})\). Then there exists a conformal diffeomorphism \(\gamma \in \mathrm{Conf}(\Sp^2,g_{\Sp^2})\) such that 
 	\begin{equation}\label{eq: x_i orthogonal to phi_1}
@@ -213,13 +202,40 @@ Recall the so-called Hersch's balancing trick.
 	for each \(i=1,2,3\), where \(x^i\) is the restriction to \(\Sp^2 \subset \R^3\) of the \(i\)-th coordinate of \(\R^3\).
 \end{lemma}
 
+We will provide a proof in Section~\ref{sec: Hersch's trick}.
+
+In Section~\ref{sec: CMC-stabile with positive genus}, we will try to test Theorem~\ref{thm: Christodoulou-Yau for higher genus} looking for some CMC-stable surfaces of positive genus. 
+
+
+\section{Christodoulou-Yau theorem for higher genus}\label{sec: Christodoulou Yau for higher genus}
+
+Before jumping in the proof of Theorem~\ref{thm: Christodoulou-Yau for higher genus}, let us point out some consequences.
+
+In 2014, Marques and Neves \cite{MarquesNeves_Willmore} proved that for every surface \(\Sigma \subset \R^3\) with genus at least 1,
+\begin{equation}\label{eq: Willmore}
+    \int_\Sigma H^2 \ge 8\pi^2
+\end{equation}
+with equality if and only if \(\Sigma\) is a torus obtained by stereographic projecting the Clifford torus \(\Sp^1(1/\sqrt{2}) \times \Sp^1(1/\sqrt{2})\) of the round 3-sphere \(\Sp^3\). 
+
+As an immediate consequence of Theorem~\ref{thm: Christodoulou-Yau for higher genus},
+\begin{cor}
+    There are no CMC-stable surfaces of genus \(k\ge 1\) in the Euclidean space \(\R^3\).
+\end{cor}
+\begin{proof}
+    Suppose by contradiction that there exists a CMC-stable surface \(\Sigma \subset \R^3\) of genus \(k\ge 1\). Suppose that \(k\) is odd. Then by \eqref{eq: Willmore} and Theorem~\ref{thm: Christodoulou-Yau for higher genus},
+    \begin{align*}
+        8\pi^2 &\le \int_\Sigma H^2 \ \dif \sigma \le -\frac{2}{3}\int_\Sigma |h^\circ|^2 \ \dif \sigma + \frac{64\pi}{3} \\
+        & \le \frac{64\pi}{3},
+    \end{align*}
+    a contradiction. If \(k\) is even, in the same way we can get \(8\pi^2 \le 16\pi\), a contradiction. \qedhere
+\end{proof}
 \begin{proof}[Proof of Theorem~\ref{thm: Christodoulou-Yau for higher genus}]
     Let \(\Phi \colon (\Sigma,g) \to (\Sp^2,g_{\Sp^2})\) as in Theorem~\ref{thm: corollary of Brill-Noether}. By Lemma~\ref{lem: Hersch trick}, up to consider \(\gamma \circ \Phi\) for some conformal diffeomorphism \(\gamma \in \mathrm{Conf}(\Sp^2,g_{\Sp^2})\), we can assume that 
-    \begin{equation*}%\label{eq: x_i orthogonal to phi_1}
+    \begin{equation*}
 		\int_\Sigma (x^i \circ \Phi) \ \dif \sigma = 0.
 	\end{equation*}
     Therefore we can use the CMC-stability inequality on each function \(x^i \circ \Phi\)
-    \begin{equation*}%\label{eq: CMC-stability}
+    \begin{equation*}
         \int_\Sigma |\nabla_g (x^i \circ \Phi)|^2 \dif \sigma \ge \int_\Sigma \left[ |h|^2 + \Ric^M(\nu,\nu)\right](x^i \circ \Phi)^2 \dif \sigma .
     \end{equation*}
     Observe that since \(\Phi\) has value on the unit sphere of \(\R^3\),
@@ -300,13 +316,13 @@ Recall the so-called Hersch's balancing trick.
 
     Now let us rearrange the right hand side of \eqref{eq: CMC-stability}. Using the twice contracted Gauss equation,
     \begin{align*}
-        |h|^2 + \Ric(\nu,\nu) &= |h|^2 + \frac{1}{2}[R -R^\Sigma + H^2-|h|^2]\\
-        &= \frac{1}{2}|h|^2 + \frac{1}{2}R -\frac{1}{2}R^\Sigma + \frac{1}{2}H^2 \\
-        &=\frac{1}{2}\left(|h^\circ|^2+R\right) + \frac{3}{4}H^2 -\frac{1}{2}R^\Sigma.
+        |h|^2 + \Ric(\nu,\nu) &= |h|^2 + \frac{1}{2}\left[R^M -R^\Sigma + H^2-|h|^2\right]\\
+        &= \frac{1}{2}|h|^2 + \frac{1}{2}R^M -\frac{1}{2}R^\Sigma + \frac{1}{2}H^2 \\
+        &=\frac{1}{2}\left(|h^\circ|^2+R^M\right) + \frac{3}{4}H^2 -\frac{1}{2}R^\Sigma.
     \end{align*}
     Using this computation and \eqref{eq: energy computation}, we can rewrite \eqref{eq: CMC-stability} as
     \begin{align*}
-        8\pi \deg(\Phi) &= \int_\Sigma \frac{1}{2}\left(|h^\circ|^2+R\right) + \frac{3}{4}H^2 -\frac{1}{2}R^\Sigma \ \dif \sigma.
+        8\pi \deg(\Phi) &= \int_\Sigma \frac{1}{2}\left(|h^\circ|^2+R^M\right) + \frac{3}{4}H^2 -\frac{1}{2}R^\Sigma \ \dif \sigma.
     \end{align*}
     By Gauss-Bonnet theorem
     \[
@@ -314,11 +330,11 @@ Recall the so-called Hersch's balancing trick.
     \]
     Thus 
     \begin{align*}
-        \frac{1}{2}\int_\Sigma (|h^\circ|^2+R) \ \dif \sigma \le 8\pi \deg(\Phi) +4\pi-4k\pi - \frac{3}{4}H^2|\Sigma|. 
+        \frac{1}{2}\int_\Sigma (|h^\circ|^2+R^M) \ \dif \sigma \le 8\pi \deg(\Phi) +4\pi-4k\pi - \frac{3}{4}H^2|\Sigma|. 
     \end{align*}
     Assume that \(k\) is even. Then \(\deg(\Phi) \le 1+ k/2\), so
     \begin{align*}
-        \frac{1}{2}\int_\Sigma (|h^\circ|^2+R) \ \dif \sigma&\le 8\pi \deg(\Phi) +4\pi-4k\pi - \frac{3}{4}H^2|\Sigma|\\
+        \frac{1}{2}\int_\Sigma (|h^\circ|^2+R^M) \ \dif \sigma&\le 8\pi \deg(\Phi) +4\pi-4k\pi - \frac{3}{4}H^2|\Sigma|\\
         &\le 8\pi +4k\pi +4\pi -4k\pi -\frac{3}{4} H^2|\Sigma|\\
         &= 12\pi -\frac{3}{4}H^2|\Sigma|.
     \end{align*}
@@ -326,11 +342,220 @@ Recall the so-called Hersch's balancing trick.
 
     Analogously, if \(k\) is odd we have the upper bound \(\deg(\Phi) \le 3/2 + k/2\), so
     \begin{align*}
-        \frac{1}{2}\int_\Sigma (|h^\circ|^2+R) \ \dif \sigma &\le 8\pi \deg(\Phi) +4\pi-4k\pi - \frac{3}{4}H^2|\Sigma|\\
+        \frac{1}{2}\int_\Sigma (|h^\circ|^2+R^M) \ \dif \sigma &\le 8\pi \deg(\Phi) +4\pi-4k\pi - \frac{3}{4}H^2|\Sigma|\\
         &\le 16\pi -\frac{3}{4}H^2|\Sigma|.
     \end{align*}
     Then again multiply by \(4/3\).
 \end{proof}
+
+\section{Existence of CMC-stable surfaces with positive genus}\label{sec: CMC-stabile with positive genus}
+
+Let us construct a very simple example of CMC-stable surfaces. Let \((\Sigma,g_\Sigma)\) be a closed orientable surface of genus \(k\). Define \(M \coloneq \R \times \Sigma\) and endow it with the metric \(g = \dif t \otimes \dif t + g_\Sigma\). Then each cross section \(\Sigma_t = \{t\} \times \Sigma\) is a totally geodesic submanifold, so by the Gauss equation
+\begin{equation}\label{eq: R^M=R^S}
+    R^M = R^\Sigma.
+\end{equation}
+Moreover, each \(\Sigma_t\) is stable, and in particular CMC-stable, so we can apply Theorem~\ref{thm: Christodoulou-Yau for higher genus}.
+\begin{itemize}
+    \item if \(k\) is even, then using the Gauss-Bonnet theorem
+    \[
+        16\pi \ge \frac{2}{3}\int_{\Sigma} R^\Sigma \ \dif \sigma= \frac{16\pi(1-k)}{3},
+    \]
+    i.e. \(k \ge -2/3\), which is true;
+    \item if \(k\) is odd, then using again the Gauss-Bonnet theorem
+    \[
+        \frac{64\pi}{3} \ge \frac{2}{3}\int_{\Sigma} R^\Sigma \ \dif \sigma= \frac{16\pi(1-k)}{3},
+    \]
+    i.e. \(k \ge -3\), which is also true.
+\end{itemize}
+However, if we require that \(R^M \ge 0\), then by \eqref{eq: R^M=R^S} \(R^\Sigma \ge 0\), so the Gauss-Bonnet theorem implies that either \(\Sigma\) is a sphere or \((\Sigma,g_\Sigma)\) is a flat torus.
+
+
+Let us see an example of a family of CMC-unstable flat tori in a positively curved 3-manifold, namely the round 3-sphere \((\Sp^3,g_{\Sp^3})\). Consider the map 
+\[
+    F \colon (0,\pi/2) \times \Sp^1 \times \Sp^1 \to \Sp^3\subset \R^4
+\]
+defined by
+\[
+    F(t,\theta,\phi) = (\cos t(\cos \theta, \sin \theta), \sin t(\cos \phi, \sin \phi)).
+\]
+For each \(t \in (0,\pi/2)\), \(F^t = F(t,\cdot,\cdot)\) is a smooth embedding of \(\Sp^1 \times \Sp^1\) in \(\Sp^3\) and a straightforward computation shows that
+\[
+    (F^t)^*g_{\Sp^3} = \cos^2 t \dif \theta \otimes \dif \theta + \sin^2 t \dif \phi \times \dif \phi.
+\]
+In particular, \(\Sigma_t = F^t(\Sp^1\times \Sp^1)\) is a CMC flat torus in \((\Sp^3,g_{\Sp^3}\) with mean curvature
+\[
+    H_t = \cot t - \tan t
+\]
+computed with respect to the unit normal
+\[
+    \nu_t\theta, \phi) = \frac{\de F}{\de t }(t, \theta, \phi) = (-\sin t(\cos \theta, \sin \theta), \cos t (\\cos \phi, \sin \phi)).
+\]
+
+The square norm of the second fundamental form is 
+\[
+    |h_t|^2 = \cot^2 t + \tan^2 t,
+\]
+so
+\[
+    |h_t^\circ|^2 = |h_t|^2 - 2H^2 = 2.
+\]
+
+The area of \(\Sigma_t\) is
+\[
+    |\Sigma_t| = (2\pi\cos t)(2\pi \sin t) = 4\pi^2 \cos t \sin t.
+\]
+
+Thus:
+\begin{align*}
+    \frac{64\pi}{3} - H^2_t|\Sigma_t| &= \frac{64\pi}{3} - 4\pi^2 \cos t \sin t (\cot t - \tan t)^2\\
+    &= \frac{64\pi}{3} - 2\pi^2 \cos 2t (\cot t - \tan t)^2 \to -\infty
+\end{align*}
+as \(t \to 0\).
+
+On the other hand, 
+\[
+    \frac{2}{3}\int_{\Sigma_t} R^{\Sp^3} + |h_t^\circ|^2 \ \dif \sigma = \frac{16}{3} >0,
+\]
+so for some \(t \in (0,\pi/2)\)
+\[
+    \frac{64\pi}{3} - H^2_t|\Sigma_t| < \frac{2}{3}\int_{\Sigma_t} R^{\Sp^3} + |h_t^\circ|^2 \ \dif \sigma . 
+\]
+
+Indeed, it's not hard to prove that, for every \(t \in (0,\pi/2)\), \(\Sigma_t \subset (\Sp^3,g_{\Sp^3})\) is not CMC-stable. From the second variation formula, for any \(u \in C^\infty(\Sigma_t)\) and associated variation variation \(\Sigma_{t,s} = \{\exp_p(tu(p)\nu_t(p) \ \colon \ p \in \Sigma_t\}\)
+\begin{align*}
+    \left(\frac{\dif^2}{\dif s^2}\right)_{s=0} |\Sigma_{t,s}| &= \int_{\Sigma_t} |\nabla_{\Sigma_t} u|^2 - (\Ric^{\Sp^3}(\nu_t,\nu_t) + |h_t|^2 - H_t^2)u^2 \ \dif \sigma_t 
+    &= \int_{\Sigma_t} |\nabla_{\Sigma_t} u|^2 -4u^2 \ \dif \sigma_t\\
+    &= -\int_{\Sigma_t} uL_t u \ \dif \sigma
+\end{align*}
+where
+\begin{align*}
+    L_t &= \Delta_{\Sigma_t} + \Ric^{\Sp^3}(\nu_t,\nu_t) + |h_t|^2-H^2_t \\
+    &= \Delta_{\Sigma_t} + 4\\
+    &= \cos^{-2} t \frac{\de^2}{\de \theta^2} + \sin^{-2} t \frac{\de^2}{\de \phi^2} + 4.
+\end{align*}
+The eigenspace associated to the first eigenvalue of \(\Delta_{\Sigma_t}\) is the space of constants functions, so by the variational characterization of eigenvalues
+\begin{align*}
+    \int_{\Sigma_t} |\nabla_{\Sigma_t} u|^2 \ \dif \sigma_t &\ge \lambda_2(t) \int_{\Sigma_t} u^2 \ \dif \sigma_t\\
+    &= 4 \int_{\Sigma_t} u^2 \ \dif \sigma_t + (\lambda_2(t)-4) \int_{\Sigma_t} u^2 \ \dif \sigma_t
+\end{align*}
+for any \(u \in C^\infty(\Sigma)\) with \(\int_{\Sigma_t} u \ \dif \sigma = 0\). Therefore \(\Sigma_t\) is CMC-stable if and only if \(\lambda_2(t) \ge 4\).
+
+The spectrum of \(\Delta_{\Sigma_t}= \cos^{-2} t \frac{\de^2}{\de \theta^2} + \sin^{-2} t \frac{\de^2}{\de \phi^2}\) is well known. Consider the functions \(\vp_{m,n} \colon (0,2\pi)\times(0,2\pi) \to \C\) defined by
+\[
+    \vp_{m,n}(\theta,\phi)= \frac{1}{2\pi}e^{im\theta}e^{i n\phi},
+\]
+for each \(m,n \in \N\). They are \(2\pi\) periodic functions, hence defined on \(\Sp^1\times \Sp^1\), and the real and imaginary part for an orthonormal basis of \(L^2(\Sp^1 \times \Sp^1)\). Moreover,
+\[
+    \frac{\de^2 \vp_{m,n}}{\de \theta^2} = -m^2 \vp_{m,n}, \qquad \frac{\de^2 \vp_{m,n}}{\de \phi^2} = -n^2 \vp_{m,n},
+\]
+so
+\[
+    -\Delta_{\Sigma_t}\vp_{m,n} = \left(\frac{m^2}{\cos^t t} + \frac{n^2}{\sin^2 t} \right) \vp_{m,n}.
+\]
+Thus \(\{ \re(\vp_{m,n}), \im(\vp_{m,n}) \ \colon m,n \in \Z\}\) are all the eigenfunctions of \(\Delta_{\Sigma_t}\), so the second eigenvalue of \(-\Delta_{\Sigma_t}\) is
+\begin{align*}
+    \lambda_2(t) = \min\left\{ \frac{1}{\cos^2(t)} , \frac{1}{\sin^2 t} \right\} \le 2 < 4.
+\end{align*}
+This proves that \(\Sigma_t\) is not CMC-stable for all \(t \in (0,\pi/2)\).
+
+
+In general, the existence of CMC-stable surfaces with positive genus is obstructed by the positivity of curvature.
+\begin{prop}
+    Let \((M^3,g)\) be a Riemannian 3-manifold and let \(\Sigma^2 \subset (M^3,g)\) be volume-preserving stable CMC surface of genus \(k\). Then
+    \begin{itemize}
+        \item if \(\Ric_g \ge 0\), then \(k \le 3\);
+        \item if \(\Ric_g >0\), then \(k \ne 2\).
+    \end{itemize}
+\end{prop}
+\begin{proof}
+    Proceed exactly as in Theorem~\ref{thm: Christodoulou-Yau for higher genus} (i.e. using Theorem~\ref{thm: corollary of Brill-Noether} and Hersch's trick Lemma~\ref{lem: Hersch trick}) to prove that
+    \begin{equation}\label{eq: fund ineq}
+        8\pi d \ge \int_\Sigma \left[ |h|^2 + \Ric^M(\nu,\nu)\right] \ \dif \sigma,
+    \end{equation}
+    where
+    \begin{equation}
+        d = d(k) \coloneq \begin{cases}
+			1+k/2 & \text{if }k \text{ is even}\\
+			3/2+ k/2 &\text{if }k \text{ is odd}.
+		\end{cases}
+    \end{equation}
+
+    Now we want to rearrange the right hand side of \eqref{eq: fund ineq} (called ‘‘Ross rearrangement trick''). Let \(E_1\) and \(E_2\) be the principal directions of \(\Sigma\) at \(p \in \Sigma\), namely an orthonormal basis of \(T_p\Sigma\) that diagonalizes the second fundamental form. Then using the Gauss equation,
+    \begin{align*}
+        |h|^2 &= h_{11}h_{22} = h_{11}h_{22} -h_{12}h_{12} = R^\Sigma_{1212} - R^M_{1212}  \\
+        &= R^\Sigma - R^M_{1212}.
+    \end{align*}
+    Writing \(E_3=\nu\) (thus forming an orthonormal basis at \(T_pM\)),
+	\begin{align*}
+		\Ric^M(\nu,\nu) + |h|^2 &= R_{1313} + R^\Sigma - R^M_{1212} \\
+		&= R_{1313}+R_{2323} + 2 R_{1212} - R^\Sigma \\
+		&= \Ric^M(E_1,E_1) + \Ric^M(E_2,E_2) - R^\Sigma
+	\end{align*}
+	Thus
+	\begin{equation}\label{eq: result of Ros rearrangement trick}
+		8\pi d \ge \int_\Sigma(\Ric^M(E_1,E_1) + \Ric^M(E_2,E_2)) \ \dif \sigma + 2\int_\Sigma \frac{R^\Sigma}{2} \ \dif \sigma.
+	\end{equation}
+	Since \(\Ric^M>0\),
+	\begin{equation*}
+		-\int_\Sigma \frac{R^\Sigma}{2} \ \dif \sigma  \le 4\pi d.
+	\end{equation*}
+	and by Gauss-Bonnet Theorem,
+	\begin{equation}
+		4\pi (k-1) = -2\pi\chi(\Sigma)\le 4\pi d.
+	\end{equation}
+	Then we have a linear inequality on \(k\):
+	\[
+		k-1 \le d(k) = \begin{cases}
+			1+k/2 & \text{if }k \text{ is even}\\
+			3/2+ k/2 &\text{if }k \text{ is odd}. 
+		\end{cases}
+	\]
+	Therefore \(k \le 3\). 
+
+    If \(\Ric>0\), then in \eqref{eq: result of Ros rearrangement trick} we get a strict inequality, so
+    \[
+		k-1 < d(k) = \begin{cases}
+			1+k/2 & \text{if }k \text{ is even}\\
+			3/2+ k/2 &\text{if }k \text{ is odd},
+		\end{cases}
+	\]
+    which implies \(k \ne 2\).
+\end{proof}
+
+\section{Hersch's balancing trick}\label{sec: Hersch's trick}
+In this section, we give the proof of Hersch's trick. Let us point out that, with essentially the same proof, one can prove also the following enhanced version of Hersch's trick.
+
+\begin{lemma}
+	Let \(\Sigma^2 \subset (M^3,g)\) be a closed oriented surface, \(\vp \in C^\infty(\Sigma)\) a positive function and \(\Phi \colon (\Sigma,g) \to (\Sp^2,g_{\Sp^2})\) any map. Then there exists a conformal diffeomorphism \(\gamma \in \mathrm{Conf}(\Sp^2,g_{\Sp^2})\) such that 
+	\begin{equation}\label{eq: x_i orthogonal to phi_1}
+		\int_\Sigma (x^i \circ \gamma \circ \Phi) \vp \ \dif \sigma = 0
+	\end{equation}
+	for each \(i=1,2,3\), where \(x^i\) is the restriction to \(\Sp^2 \subset \R^3\) of the \(i\)-th coordinate of \(\R^3\).
+\end{lemma}
+
+This extended version can be useful when dealing with index 1 minimal surfaces. Indeed recall that if \(\Sigma^2 \subset (M^3,g)\) is a closed two-sided minimal surface with unit normal \(\nu\), then its second variation is
+\begin{align*}
+    \left(\frac{\dif^2}{\dif t^2}\right)_{t=0} |\Sigma_t| &= \int_\Sigma |\nabla_\Sigma u|^2 - (\Ric^M(\nu,\nu) + |h|^2)u^2 \ \dif \sigma \\
+    &= -\int_\Sigma uL_\Sigma u \ \dif \sigma
+\end{align*}
+if \(\Sigma_t = \{ \exp_p(tu(p)\nu_p) \ \colon \ p \in \Sigma\}\) and where
+\[
+    L_\Sigma v \coloneq \Delta_\Sigma v + (\Ric^M(\nu,\nu) + |h|^2)v \qquad \forall v \in C^\infty(\Sigma)
+\]
+is the \emph{Jacobi operator}. The \emph{Morse index} of a minimal surface is the number of negative eigenvalues of the Jacobi operator. Let \(\vp_1 \in C^\infty(M)\) be an \(L^2\)-normalized eigenfunction associated to the first eigenvalue \(\lambda_1\), namely a minimizer of the Rayleigh quotient
+\[
+        \min_{u \in C^\infty(M)\setminus\{0\}}\frac{ \int_\Sigma |\nabla_\Sigma u|^2 - (\Ric^M(\nu,\nu) + |h|^2)u^2 \ \dif \sigma}{\int_\Sigma u^2\dif \sigma}.
+\]
+It is well known that \(\vp_1\) is uniquely defined up to a sign and it never vanishes, so let's say that it is positive. Recall that the second eigenvalue is characterized as
+\[
+    \lambda_2 = \inf\left\{\frac{ \int_\Sigma |\nabla_\Sigma u|^2 - (\Ric^M(\nu,\nu) + |h|^2)u^2 \ \dif \sigma}{\int_\Sigma u^2\dif \sigma} \ \colon \ \int_\Sigma u \vp_1 \ \dif \sigma = 0 \right\}.
+\]
+Thus if \(\Sigma\) has Morse index 1, then \(\lambda_2 \ge 0\), so we have the inequality
+\begin{equation*}
+    \int_\Sigma |\nabla_\Sigma u|^2 \ \dif \sigma \ge \int_\Sigma (\Ric^M(\nu,\nu) + |h|^2)u^2 \ \dif \sigma
+\end{equation*}
+for any \(u \in C^\infty(M)\) such that \(\int_\Sigma u \vp_1 \ \dif \sigma = 0\). 
+Then one can combine this inequality with Hersch's trick exactly as we did with the CMC-stability inequality. 
 
 
 \begin{proof}[Proof of Lemma~\ref{lem: Hersch trick}]
@@ -418,15 +643,18 @@ a contradiction, so \(0 \in \Psi(\Sigma)\). This proves the lemma. \qedhere
 
 \appendix
 \section{The Brill-Noether theorem}
-A Riemann surface is a compact complex manifold of complex dimension 1, namely a complex curve. They correspond to all orientable compact surfaces: the sphere \(\Sp^2 = \C\Pbb^1\), the torus \(\T^2\) and the tori with multiple holes. The number of holes \(k\) is called \emph{genus}. 
+A Riemann surface is a compact complex manifold of complex dimension 1, namely a complex curve. They correspond to all orientable closed surfaces: the sphere \(\Sp^2 = \C\Pbb^1\), the torus \(\T^2\) and the tori with multiple holes. The number of holes \(k\) is called \emph{genus}. 
 
 Let \(\Sigma_1\) and \(\Sigma_2\) be two Riemann surfaces. A map \(\vp \colon \Sigma_1 \to \Sigma_2\) is holomorphic if on every complex atlas it's holomorphic. Fix two complex charts \((U, z)\) on \(\Sigma_1\) and \((V,w)\) on \(\Sigma_2\), and consider the local representation \(f=w \circ \vp \circ z^{-1} \colon \Omega \to \C\). Since \(f\) is holomorphic, its complex derivative \(f'\colon \Omega \to \C\) is still holomorphic, so it's either constantly 0 or it has a discrete set of zeroes. Moreover, by the Cauchy-Riemann equations, \(f \colon \Omega \to \R^2\) (as a real map) has only regular points and points where the differential vanishes. As a consequence, either \(\vp\) is constant, or it has a discrete set of critical points (and on those points, the differential \(\dif\vp\) vanishes), called \emph{branch points}. 
 
-Now assume that \(\vp\) is not constant and endow both surfaces with a Riemannian metric: \((\Sigma_1,g_1)\) and \((\Sigma_2,g_2)\). Then \(\vp \colon (\Sigma_1,g_1) \to (\Sigma_2,g_2)\) is almost-conformal, i.e. there exists a function \(\lambda \colon \Sigma_1 \setminus \Gamma \to \R\) (that can take the value 0) such that
-\[
-    g_1 = \lambda^2 \vp^*g_2 \qquad \text{on }\Sigma_1\setminus \Gamma,
-\]
-where \(\Gamma\subset \Sigma_1\) is the set of branch points of \(\vp\). 
+The complex structure implies strong geometric consequences. Indeed, it's not hard to prove the following.
+\begin{prop}
+    Let \((\Sigma_1,g_1)\) and \((\Sigma_2,g_2)\) be two Riemann surfaces (endowed with Riemannian metrics) and let \(\vp \colon \Sigma_1 \to \Sigma_2\) be a non constant holomorphic map. Then \(\vp \colon (\Sigma_1,g_1) \to (\Sigma_2,g_2)\) is almost-conformal, i.e. there exists a function \(\lambda \colon \Sigma_1 \setminus \Gamma \to \R\setminus\{0\}\) such that
+    \[
+        g_1 = \lambda^2 \vp^*g_2 \qquad \text{on }\Sigma_1\setminus \Gamma,
+    \]
+    where \(\Gamma\subset \Sigma_1\) is the set of branch points of \(\vp\). 
+\end{prop}
 
 It holds the following deep theorem (see \cite[Chapter XXI]{ACGH_GeometryAlgebraicCurves}).
 \begin{thm}[Brill-Noether]\label{thm: Brill-Noether}
