Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -102,7 +102,7 @@
  	\clearfield{note} % Nasconde le note
 }
 \addbibresource{biblio.bib}
-\title{Christodoulou-Yau theorem for higher genus}
+\title{The Christodoulou-Yau theorem for higher genus}
 \author{Andrea Martelli}
 \date{May 2025}
 
@@ -113,7 +113,7 @@
 
 \section{Introduction}
 
-It holds the following theorem, proved by D. Christodoulou and S.T. Yau:
+The following result by D. Christodoulou and S.T. Yau is a classical theorem in Riemannian geometry.
 \begin{thm}[Christodoulou, Yau]\label{thm: Christodoulou-Yau}
     Let \((M^3,g)\) be a Riemannian 3-manifold and let \(\Sigma^2 \subset (M^3,g)\) be volume-preserving stable CMC sphere. Then
     \begin{equation}\label{eq: CY eq}
