Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -202,9 +202,9 @@ The proof of Theorem~\ref{thm: corollary of Brill-Noether} is a consequence of t
 
 \begin{lemma}[Hersch's balancing trick]\label{lem: Hersch trick}
 	Let \(\Sigma^2 \subset (M^3,g)\) be a closed oriented surface and a map \(\Phi \colon (\Sigma,g) \to (\Sp^2,g_{\Sp^2})\). Then there exists a conformal diffeomorphism \(\gamma \in \mathrm{Conf}(\Sp^2,g_{\Sp^2})\) such that 
-	\begin{equation}\label{eq: x_i orthogonal to phi_1}
+	\begin{equation*}
 		\int_\Sigma (x^i \circ \gamma \circ \Phi) \ \dif \sigma = 0
-	\end{equation}
+	\end{equation*}
 	for each \(i=1,2,3\), where \(x^i\) is the restriction to \(\Sp^2 \subset \R^3\) of the \(i\)-th coordinate of \(\R^3\).
 \end{lemma}
 
@@ -531,9 +531,9 @@ In this section, we give the proof of Hersch's trick. Let us point out that, wit
 
 \begin{lemma}\label{lem: Hersch trick +}
 	Let \(\Sigma^2 \subset (M^3,g)\) be a closed oriented surface, \(\vp \in C^\infty(\Sigma)\) a positive function and \(\Phi \colon (\Sigma,g) \to (\Sp^2,g_{\Sp^2})\) any map. Then there exists a conformal diffeomorphism \(\gamma \in \mathrm{Conf}(\Sp^2,g_{\Sp^2})\) such that 
-	\begin{equation}\label{eq: x_i orthogonal to phi_1}
+	\begin{equation*}
 		\int_\Sigma (x^i \circ \gamma \circ \Phi) \vp \ \dif \sigma = 0
-	\end{equation}
+	\end{equation*}
 	for each \(i=1,2,3\), where \(x^i\) is the restriction to \(\Sp^2 \subset \R^3\) of the \(i\)-th coordinate of \(\R^3\).
 \end{lemma}
 
